# ai-agent

./: .dockerignore  .gitignore  Readme.md  docker-compose.yml  requirements.txt
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  api.py  docker-compose.yml  generate_docs.py  pyproject.toml  refresh_token.txt  requirements.txt  test.py  test3.py  test_config_call.py
backend/src/: database.py  main.py
backend/src/agents/: __init__.py  agent.py  base_agent.py  browser_agent.py  calendar_agent.py  call_agent.py  email_agent.py  memory_agent.py  review_agent.py  search_agent.py  sheet_agent.py  supervisor_agent.py
backend/src/api/: Readme.md  api.py  call_endpoints.py  main.py  run_api.py  state_utils.py  test_api.py
backend/src/chains/: brave_agent_chain.py  calender_agent_chain.py  email_agent_chain.py  memory_agent_chain.py  outlook_agent_chain.py  sheet_agent_chain.py  supervisor_chain.py
backend/src/config/: llm.py  llm_config.yaml  memory_config.py
backend/src/graph/: agent.py  base_graph.py  brave_agent.py  browser_agent.py  consts.py  email_agent.py  email_graph.py  main.py  multi_agent.py  nodes.py  outlook_agent.py  react_agent.py  router.py  state.py  test.py  utils.py  visualize.py  workflow.py
backend/src/models/: __init__.py  llm.py
backend/src/prompts/: brave_agent_prompt.txt  calender_agent_prompt.txt  email_agent_prompt.txt  email_agent_prompt_.txt  memory_agent_prompt.txt  outlook_agent_prompt.txt  (+2 more)
backend/test/: google_sheet_test.py  test.py  test1.py
backend/tests/: test.py  test_client.py  test_supervisor_filter.py
(+46 files in other folders)
